Fixes
- Shown own username on user-page
- Fixed scrollbar always showing in connected-page
- Removed unneeded code
- Fixed overflow in connected-page
- Improved size of cells in file-progress page

--- a/public/scss/_connected-page.scss
+++ b/public/scss/_connected-page.scss
@@ -4,27 +4,11 @@
     display: flex;
     overflow: hidden;
     padding: 10px;
-
-    .list-group {
-      display: flex;
-      flex-direction: column;
-      padding-left: 0;
-      margin-bottom: 0;
-
-      .list-group-item {
-        position: relative;
-        padding: 0.75rem 1.25rem;
-        margin-bottom: -1px;
-        background-color: #fff;
-        border: 1px solid rgba(0, 0, 0, 0.125);
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
-    }
   }
 
-  #approve-files, #select-files-send, #file-progress{
+  #approve-files,
+  #select-files-send,
+  #file-progress {
     overflow: auto;
 
     label {
@@ -40,8 +24,7 @@
       th,
       td {
         border-collapse: collapse;
-        border: 1px solid rgba(0,0,0,.125);
-        margin-bottom: -1px;
+        border: 1px solid rgba(0, 0, 0, 0.125);
       }
 
       label {
@@ -70,7 +53,6 @@
         background-color: #1bd9df1a;
       }
     }
-
 
     button {
       margin: auto;
@@ -121,6 +103,20 @@
       margin: auto;
       margin-bottom: 20px;
       color: var(--main-color);
+    }
+  }
+}
+
+// TEMP
+#file-progress {
+  tr > {
+    td:first-child {
+      width: 50%;
+      word-break: break-all;
+    }
+
+    td progress {
+      width: 100%;
     }
   }
 }
