--- a/public/scss/_general.scss
+++ b/public/scss/_general.scss
@@ -48,7 +48,7 @@ body {
     display: flex;
     height: 70%;
     width: 80%;
-    overflow: hidden;
+    overflow: auto;
 
     > div {
       flex: 1;
